--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.3"
+    "mysql2": "^3.9.0",
+    "nodemon": "^3.0.3",
+    "sequelize": "^6.35.2"
   }
 }
