--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "antd": "^5.14.0",
     "chart.js": "^4.4.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
