--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "customize-cra": "^1.0.0",
+    "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
