--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ PORT=4004
 DB_NAME='iot_dashboard'
 DB_USERNAME='root'
 DB_PASSWORD='12345678'
+
+MQTT_HOST='c30da14cc83d438982f23d21ea07f8b6.s1.eu.hivemq.cloud'
+MQTT_PORT=8883
+MQTT_USERNAME='hbthanh5802'
+MQTT_PASSWORD='HBThanh582002'
