--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "mqtt": "^5.3.5",
     "mysql2": "^3.9.0",
     "nodemon": "^3.0.3",
     "sequelize": "^6.35.2"
