--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DB_NAME='iot_dashboard'
 DB_USERNAME='root'
 DB_PASSWORD='12345678'
 
-MQTT_HOST='c30da14cc83d438982f23d21ea07f8b6.s1.eu.hivemq.cloud'
-MQTT_PORT=8883
+MQTT_HOST='localhost'
+MQTT_PORT=5802
 MQTT_USERNAME='hbthanh5802'
 MQTT_PASSWORD='HBThanh582002'
