--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mqtt": "^5.3.5",
     "mysql2": "^3.9.0",
     "nodemon": "^3.0.3",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "uuid": "^9.0.1"
   }
 }
