--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "mqtt": "^5.3.5",
     "mysql2": "^3.9.0",
