--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.9.0",
     "nodemon": "^3.0.3",
     "sequelize": "^6.35.2",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
 }
