--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -2,6 +2,7 @@
   "name": "iot-dashboard",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4004",
   "scripts": {
     "start": "react-app-rewired start",
     "dev": "react-app-rewired start",
@@ -49,6 +50,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.5",
     "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4"
   },
