--- a/apiDocs.yaml
+++ b/apiDocs.yaml
@@ -274,6 +274,34 @@ paths:
             enum:
               - ASC
               - DESC
+        - name: searchField
+          in: query
+          required: false
+          description: The field that you want to search.
+          schema:
+            type: string
+            enum:
+              - temperature
+              - humidity
+              - brightness
+        - name: searchOperator
+          in: query
+          required: false
+          description: The operator of comparison.
+          schema:
+            type: string
+            enum:
+              - equal
+              - greater
+              - less
+              - inRange
+        - name: searchValue
+          in: query
+          required: false
+          description: The value you want to search. If operator is `inRange`, you need to <mark>provide a second value</mark>, one comma after the first one (Example '`12,50`' means **from 12 to 50**')
+          schema:
+            type: string
+            example: '12'
         - name: page
           in: query
           required: false
